# CS691LLMs

./: .gitignore  README.md  build_dataset.py  build_prompts.py  closest.py  combined.ipynb  create_conversation_db.py  create_world_db.py  fixed_conversations.txt  pairs.txt  plots.ipynb  prompt_template.txt  pyproject.toml  sort.html  study.py  world1.txt  world2.txt  world3.txt  world4.txt  world5.txt  world6.txt
gemma/: inference_gemma.py  pyproject.toml  train_gemma.py
llama/: merge_llama.py  pyproject.toml  train_llama.py
ministral/: pyproject.toml  train_ministral.py
phi/: pyproject.toml  train_phi.py
qwen/: pyproject.toml  train_qwen.py
