[project]
name = "llama-env"
version = "0.1.0"
requires-python = "==3.12.12"

dependencies = [
    "usearch",
    "sentence-transformers",
    "nltk",
    "unsloth",
    "datasets==4.3.0",
    "huggingface_hub>=0.34.0"
]

[tool.uv]
# Optional but helpful for reproducibility
resolution = "highest"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"